@@ -270,11 +270,16 @@ environment changes found within conditional statements.)
 List loaded modules.
 .TP 15
 .B avail [path...]
-List all available modulefiles in the current \s-1MODULEPATH\s0.
+List all available modulefiles in the current \s-1MODULEPATH\s0, where
+the sorting order is given by the \s-1LC_COLLATE\s0 locale environment
+variable.
+
 All directories in the \s-1MODULEPATH\s0 are recursively searched for
 files containing the \fImodulefile\fP magic cookie.
+
 If an argument is given, then each directory in the \s-1MODULEPATH\s0 is
 searched for modulefiles whose pathname match the argument.
+
 Multiple versions of an application can be supported by creating a
 subdirectory for the application containing modulefiles for each version.
 .PD
