@@ -840,7 +840,8 @@ So, changes made in these file will affect the subsequently
 interpreted \fImodulefile\fP.
 .LP
 If no \fIdefault\fP version may be figured out, then the highest
-lexicographically sorted \fImodulefile\fP under the directory will be used.
+lexicographically sorted \fImodulefile\fP under the directory
+using the 'C' locale will be used.
 .LP
 For example, it is possible for a user to have a directory named \fIX11\fP
 which simply contains a \fI.version\fP file specifying which
