@@ -14,6 +14,7 @@ Modules 3.2.10
 	* Moved from cvs to git
 	* Fix the module swap with the --delim option (Tyson Whitehead)
 	* Increased the "update" buffer (Leon Kos)
+	* Use the locale for sorting modulefiles by the avail command
 
 Modules 3.2.9
 Nov 24, 2011				R.K. Owen (rk@owen.sj.ca.us)
